# Team_Tiburon

./: CMakeLists.txt  package.xml
image_thresholdin2_ui/: image_thresholdin2_ui.pro  widget.ui
include/image_threshing_tool/: image_threshing_tool.h
src/: image_threshing_tool.cpp  main.cpp
task_9_jan/: CMakeLists.txt  package.xml
task_9_jan/src/: bucket.cpp  gate.cpp  red_con.cpp  yel_con.cpp  yelllow.cpp  yellow.cpp
tiburon_gui/: CMakeLists.txt  package.xml  readme
tiburon_gui/config/: gateconfig.txt  yellowflareconfig.txt
tiburon_gui/include/tiburon_gui/: bluebucket.h  gate.h  mainwin.h  redbucket.h  redflare.h  yellowflare.h
tiburon_gui/src/: bluebucket.cpp  gate.cpp  main.cpp  mainwin.cpp  redbucket.cpp  redflare.cpp  yellowflare.cpp
tiburon_gui/ui/: bluebucket.ui  gate.ui  mainwin.ui  redbucket.ui  redflare.ui  tiburon_gui.pro  yellowflare.ui
tiburon_gui/ui/build-tiburon_gui-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  ui_bluebucket.h  ui_gate.h  ui_mainwin.h  ui_redbucket.h  ui_redflare.h  ui_yellowflare.h
ui/: image_threshing_tool.pro  image_threshing_tool.ui  image_threshing_tool.ui.autosave
